--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,7 +28,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>DevConnector</title>
+    <title>Voltaire</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
